syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message UserByEmailRequest {
    string email = 1;
}
