syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    map<string, string> attributes = 4;
    string createdAt = 5;

}